--- a/MTP_portfolio.css
+++ b/MTP_portfolio.css
@@ -38,7 +38,7 @@ h1:hover {
 
 /* Styling for portfolio title text */
 .white-text {
-    color:white; /* This is used to change the color of the portfolio title text */
+    color:rgb(221, 169, 169); /* This is used to change the color of the portfolio title text */
 }
 
 /* Paragraph Elements */
@@ -46,7 +46,7 @@ p {
     font-family: "Trebuchet MS", Optima;
     text-align: justify; /* Justify text within paragraph elements */
     letter-spacing: .1vw; /* This expands the text slightly */
-    font-size: 1.25vw;
+    font-size: 1.5vw;
     padding-left: 1vw; /* Adds padding to the left of the paragraph element */
     padding-right: 1vw; /* Adds padding to the right of the paragraph element */
 }
